--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
-.App {
-  text-align: center;
+.App-background {
+  background: rgb(26,22,97);
+  background: linear-gradient(90deg, rgba(26,22,97,1) 10%, rgba(255,90,246,1) 100%, rgba(0,212,255,1) 100%);
+  height: 100vh;
+}
+.voco-logo{
+  width: 15vh;
+  height: 6vh;
+}
+.nav-items{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.user-icon{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin: 2px 5px;
+}
+.message-text{
+  max-width: 500px;
+  margin-bottom: 12px;
+  line-height: 24px;
+  padding: 10px 20px;
+  border-radius: 25px;
+  position: relative;
+  color: white;
+  text-align: justify;
+  word-wrap:break-word;
+}
+.sent {
+  flex-direction: row-reverse;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.sent p {
+  color: white;
+  background: #0b93f6;
+  align-self: flex-end;
+}
+.received p {
+  color: white;
+  background: #32CD5B;
+}
+.chatbox{
+  background: #1D2028;
+  width: 50%;
+  border-radius: 10px 10px 0 0;
+
+}
+.space-between{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+ul, li {
+  text-align: left;
+  list-style: none;
+}
+.message {
+  display: flex;
+  align-items: center;
+}
+.middleton{
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.chat_messages_area {
+  padding: 10px;
+  height: 80vh;
+  overflow-y: scroll;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  margin: 8px 0 1px 0;
+}
+
+.chat_messages_area::-webkit-scrollbar {
+  width: 0.25rem;
+}
+
+.chat_messages_area::-webkit-scrollbar-track {
+  background: #1D2028;
+}
+
+.chat_messages_area::-webkit-scrollbar-thumb {
+  background: #e1e1e1;
+  border-radius: 2px;
+}
+.outer_div{
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  min-height: 100vh;
 }
